<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Riddle Me That</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="play">PLAY</string>
    <string name="earncoin">EARN COIN</string>
    <string name="restart">RESTART</string>
    
    <string name="admob_publisher_id">ca-app-pub-8356404931736973/2001120391</string> <!-- Change AdMob Id -->
    <string name="admob_intertestial_id">ca-app-pub-8356404931736973/4633515992</string><!-- your admob intertestial ad id-->
    <string name="number_of_stage_ad">3</string>

    <!-- play store application link i.e more apps -->
    <string name="play_more_apps">https://play.google.com/store/search?q=gkcrop</string>  
    
    <!-- your facebook url -->
    <string name="facebook_url">http://facebook.com</string>
    
    
     <!-- Reset Dailog Message -->
    <string name="reset_msg">If you wish to restart your game, Please click Yes! or else click No!</string>
    <string name="reset_title">Restart your Game?</string>
    <string name="reset_yes">Yes</string>
    <string name="reset_no">No</string>
    <string name="reset_msg_1">CONGRATULATIONS!</string>
    <string name="reset_msg_2">Congratulations! You have completed this part of the game.\nDo not hesitate to come back later to play new levels.</string>
    
    
    <!-- Score Management -->
    <string name="how_much_for_first_letter">15</string><!-- how much point you set for use that hint -->
    <string name="how_much_for_bomb">25</string>
    <string name="how_much_for_skip">35</string>
    
    <string name="first_letter_msg_1">Do you want to discover 1st letter for 15 coins?</string>
    <string name="first_letter_msg_2">You must have 15 coins!</string>
    <string name="first_letter_msg_3">DISCOVER 1st LETTER!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    
    <string name="bomb_msg_1">Do you want to hide 3 letters for 25 coins?</string>
    <string name="bomb_msg_2">You must have 25 coins!</string>
    <string name="bomb_msg_3">HIDE 3 LETTERS!</string>
    
    <string name="skip_msg_1">Do you want to skip this question for 35 coins?</string>
    <string name="skip_msg_2">You must have 35 coins!</string>
    <string name="skip_msg_3">Skip Question!</string>
    
    <string name="point_give">1|10</string><!-- note that here 1 is indicate 1st stage and 10 is point so here we have 10 point already in that game for first start -->
    
    <string name="a">A</string>
    
    
     <!-- Earn Coin Management -->
    <string name="facebook">Like on Facebook-10 Coins</string>
	<string name="twitter">Follow on Twitter-25 Coins</string>
	<string name="youtube">Subscribe Youtuube-25 Coins</string>
	<string name="rateapp">Rate Application-25 Coins</string>
	<string name="moreapp">More Application-25 Coins</string>
	<string name="website">Visit Website-20 Coins</string>
	<string name="shareapp">Share Application-50 Coins</string>
	
	<string name="how_much_for_facebook_coins">10</string>
	<string name="how_much_for_twitter_coins">25</string>
	<string name="how_much_for_youtube_coins">25</string>
	<string name="how_much_for_rateapp_coins">25</string>
	<string name="how_much_for_moreapp_coins">25</string>
	<string name="how_much_for_website_coins">20</string>
	<string name="how_much_for_shareapp_coins">50</string>
	
	<string name="facebook_link">http://facebook.com</string>
	<string name="twitter_link">http://twitter.com/</string>
	<string name="youtube_link">http://youtube.com</string>
	<string name="website_link">http://codecanyon.net</string>
    
    
    
    

</resources>
