<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
     >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    </LinearLayout>

    

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" 
        android:padding="10.0dip">
        
        <ImageView
        android:id="@+id/textViewTitle"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="3.0"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:src="@drawable/app_image" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4.0dip"
            android:layout_weight="1.0"
            
            android:orientation="horizontal"
            android:paddingBottom="0.0dip"
            android:paddingLeft="0.0dip"
            android:paddingRight="0.0dip"
            android:paddingTop="12.0dip" >

            <Button
                android:id="@+id/letsPlay"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button1"
                android:gravity="center"
                android:text="@string/play"
                android:textColor="@color/white"
                android:textSize="50.0sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4.0dip"
            android:layout_weight="1.0"
            
            android:orientation="horizontal"
            android:paddingBottom="0.0dip"
            android:paddingLeft="0.0dip"
            android:paddingRight="0.0dip"
            android:paddingTop="12.0dip" >

            <Button
                android:id="@+id/earncoin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button1"
                android:gravity="center"
                android:text="@string/earncoin"
                android:textColor="@color/white"
                android:textSize="50.0sp"
                android:textStyle="bold" />
        </LinearLayout>

       
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:orientation="horizontal"
        android:id="@+id/adlayout">
        
         
        </LinearLayout>
    
    
</LinearLayout>